# d-diagrams

./: CHANGELOG.md  d-diagrams.cabal
app/: Counting.hs  Main.hs  Parser.hs  Puzzle.hs  Regions.hs  Rendering.hs  Solution.hs  Utils.hs
examples/: ex3.txt  ex5.txt
