cabal-version:      2.4
name:               d-diagrams
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Eric Mertens
maintainer:         emertens@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable d-diagrams
    main-is:          Main.hs
    other-modules:
        Counting
        Puzzle
        Rendering
        Utils
        Solution
        Regions
    default-extensions:
        ImportQualifiedPost
        BlockArguments
        LambdaCase
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base,
        ersatz,
        containers,
        ansi-terminal,
