cabal-version:          2.4
name:                   d-diagrams
version:                0.1.0.0
synopsis:               Solver for Dungeons & Diagrams
description:
  Solver for the Dungeons & Diagrams game found in Last Call BBS
  implemented by converting a puzzle to a SAT statement and calling
  out to an external SAT solver.
license:                ISC
author:                 Eric Mertens
maintainer:             emertens@gmail.com
copyright:              2022 Eric Mertens
category:               Game
extra-source-files:     CHANGELOG.md

source-repository head
    type:               git
    branch:             main
    location:           https://github.com/glguy/d-diagrams

executable d-diagrams
    main-is:            Main.hs
    hs-source-dirs:     app
    default-language:   Haskell2010
    ghc-options:        -Wall
    other-modules:
        Counting
        Grids
        Parser
        Puzzle
        Rendering
        Solution
    default-extensions:
        BlockArguments
        ImportQualifiedPost
        LambdaCase
    build-depends:
        ansi-terminal,
        base ^>= 4.16,
        containers,
        ersatz,
        split,
